Project

General

Profile

Actions

Bug #39380

closed

On rook master branch s3cmd make bucket returns error InvalidLocationConstraint

Added by Mark Kogan about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Rook is creating zones and users using :

radosgw-admin --version
ceph version 14.2.0 (3a54b2b6d167d4a2a19e003a705696d4fe619afc) nautilus (stable)

while running radosgw version 13.2.5:

grep "image:" * 
cluster.yaml:23:    image: ceph/ceph:v13.2.5-20190319

radosgw-admin v14.x is adding a slash from the storage class to the default placement even when the storage class is 'standard'

oc -n rook-ceph exec -it $(oc -n rook-ceph get pod -l "app=rook-ceph-rgw" -o jsonpath='{.items[0].metadata.name}') -- bash
radosgw-admin --keyring=/etc/ceph/keyring-store/keyring --mon-host=$ROOK_CEPH_MON_HOST --name=client.radosgw.gateway  metadata get user:cosbench
"default_placement": "/" 
-------------------->^^^

radosgw-admin --keyring=/etc/ceph/keyring-store/keyring --mon-host=$ROOK_CEPH_MON_HOST --name=client.radosgw.gateway  zonegroup get
{
    "placement_targets": [
        {
            "name": "default-placement",
            "tags": []
        }
    ],
    "default_placement": "default-placement/",
------------------------------------------>^
    "realm_id": "52539210-99bc-449b-9bae-00e60bd5064a" 
}

Which is causing the s3cmd error:

s3cmd mb s3://bkt
ERROR: S3 error: 400 (InvalidLocationConstraint)

and the rgw log shows:

2019-04-10 14:35:37.201 7fc747b96700  0 could not find user default placement id / within zonegroup

Reference:
[1] rook tracker issue: https://github.com/rook/rook/issues/2945


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #39745: nautilus: On rook master branch s3cmd make bucket returns error InvalidLocationConstraintResolvedNathan CutlerActions
Actions #1

Updated by Mark Kogan about 5 years ago

  • Pull request ID set to 27676
Actions #2

Updated by J. Eric Ivancich about 5 years ago

  • Status changed from In Progress to 7
Actions #3

Updated by Casey Bodley almost 5 years ago

  • Status changed from 7 to Pending Backport
  • Backport set to nautilus
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39745: nautilus: On rook master branch s3cmd make bucket returns error InvalidLocationConstraint added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF