rgw: fix default_placement containing "/" when storage_class is standard fixes: http://tracker.ceph.com/issues/39380

Signed-off-by: mkogan1 <mkogan@redhat.com>